TinyStyles.css
body {
  background-color: rgb(255,150,100,0.2);
  font-size: 1.3em;
  scroll-behavior: smooth;
  text-align: center;
}

.Title {
  filter: drop-shadow(7px -3px 5px rgb(255,150,100,0.6));
}
.Title h1 {
  font-family: serif;
  position:relative;
  padding: 1em 1.5em;
  margin: 0 auto;
  width: 8em;
  background: radial-gradient(circle at bottom right, transparent 50px, transparent 0) bottom right/50% no-repeat,
  radial-gradient(circle at bottom left, transparent 50px, transparent 0) bottom left/50% no-repeat;
  overflow: hidden;
}
.Title h1::before {
  content: "";
  position: absolute;
  top:0; bottom:0; right:0; left: 0;
  background: repeating-linear-gradient(10deg, rgb(255,150,100,0.6) 0, rgb(255,150,100,0.6) 40px, rgba(255, 255, 255, 0.6) 43px, rgba(255, 255, 255, 0.6) 70px);
  z-index: -50;
  border-radius: 1em;
}

.Buttons {
  margin: 0 auto;
  display: flex;
  width: 13em;
  flex-wrap: wrap;
  flex-direction: column;
}
#NewTaskField {
  position: sticky;
  top: 3em;
  z-index: 999;
  padding: 0.7em 0.5em;
  font-size: 18px;
}
.TaskSet {
  background: url(salmy/salmy-lowleft.png) 30%/90px no-repeat;
}
.TaskReset {
  background: url(salmy/salmy-upright.png) 10%/70px no-repeat ;
}
.TaskSet:active, .TaskReset:active {
  color: black;
}
.TaskInput { margin-top: 1em;}
.TaskReset { margin-bottom: 2em;}
.TaskSet, .TaskReset, .TaskInput {
  flex: 1 1 2em;
  padding: 1em 0.6em;
  border-radius: 0.7em;
  background-color: rgb(255,250,250,0.8);
  text-align: right;
  font-size: 1.1em;
}
@media screen and (min-width: 1130px) {
  .Title {
    position: absolute;
    margin: 2% 8%;
  }
  .Title h1 {
    padding: 2em 1.7em;
  }
  #NewTaskField {
    position: static;
  }
  .Buttons {
    width: 30vw;
    position: relative;
    left: 12em;
  }
  .TaskSet {
    background: url(salmy/salmy-lowleft.png) 50%/90px no-repeat;
    background-color: rgb(255,250,250,0.8);
  }
  .TaskReset {
    background: url(salmy/salmy-upright.png) 30%/70px no-repeat ;
    background-color: rgb(255,250,250,0.8);
  }
}


.CenteredLists {
  margin: 0 auto;
  text-align: center;
  width: 80%;
}
.Lists {
  display: flex;
  justify-content: center;
}
#list_tasks {
  width: 40%;
  text-align: left;
  padding: 2em 4em;
  flex-grow: 1;
}
#list_tomorrow_tasks {
  width: 40%;
  text-align: left;
  padding: 2em 4em;
  flex-grow: 1;
}

#list_tasks input {
  transform: scale(1.45);
}
#list_tomorrow_tasks input {
  transform: scale(1.45);
}
.active {
  position: relative;
  background-color: rgb(255,150,100,0.3);
  box-shadow: 0 0 20px 10px rgb(255,150,100,0.3);
  border-radius: 30%;
  overflow: hidden;
}
.active::before {
  content: "";
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  background-image: url(salmy/salmy-right.png);
  background-size: 120px;
  background-repeat: repeat-y;
  background-position: left -50px bottom 35%;
  z-index: -10;
}
.passive {
  position: relative;
}

.ToggleActiveState {
  text-align: center;
}
.ToggleActiveState input {
  width: 80px;
  height: 40px;
  border-radius: 20px;
  background-color: rgb(255,160,110,0.7);
  box-sizing: inherit;
}

@media screen and (max-width: 1000px) {
  #list_tasks {
    width: 40%;
    text-align: left;
    float: left;
    padding: 2.5% 5%;
  }
  #list_tomorrow_tasks {
    width: 40%;
    float: right;
    text-align: left;
    padding: 2.5% 5%;
  }
  .Centered {
    margin: 0 auto;
    text-align: center;
    width: 60%;
  }
  .CenteredLists {
    margin: 0 auto;
    text-align: center;
    width: 90%;
  }
  .active::before {
    background-image: none;
  }
}

.FlexInfo {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
.DivInfo {
  flex: 40 1 10em;
}
.DivImage {
  flex: 1 1 1em;
  position: relative
}
.DivImage img {
  width: 50px;
}
.DivImage button {
  border: none;
  background-color: rgb(255,150,100,0.05);
}
#Info {
  display: none;
  background-color: rgb(255,150,100,0.3);
  box-shadow: 0 0 20px 10px rgb(255,150,100,0.3);
  border-radius: 10%;
  padding: 1em;
  margin-left: 10vw;
  margin-right: 10vw;
  position: absolute;
  right: 1em;
  top: 1em;
}
kbd {
  border: 1px solid black;
  background: white;
  padding: 2px 4px
}

